# betavoltaic-sim

./: .gitignore  CMakeLists.txt  HERMES_ONBOARDING.md  README.md  setup_env.ps1
.claude/skills/betavoltaic-sim/: SKILL.md
analysis/: compare_runs.py  plot.py  yaml_to_mac.py
configs/: example_TiO2_TNTAs.yaml  example_ZnO_nanowire.yaml
doc/: paper.md
docs/: index.html  report.html
docs/superpowers/plans/: 2026-06-06-geant4-betavoltaic-fig2-reproduction.md
docs/superpowers/specs/: 2026-06-06-betavoltaic-sim-skill-GOAL.md  2026-06-06-calibration-scan.md  2026-06-06-geant4-betavoltaic-fig2-reproduction-design.md  2026-06-06-planB-design.md  2026-06-06-validation-report.md  2026-06-07-plotting-guide.md  2026-06-07-tool-validation-benchmarks.md
macros/: golden_etnt.mac  golden_tnt.mac  golden_tsc.mac  run_default.mac  smoke.mac  smoke_tsc.mac
scripts/: build_geant4.ps1  install_vs.ps1  run_all.ps1
src/: ActionInitialization.cc  ActionInitialization.hh  Analysis.cc  Analysis.hh  BetaSpectrum.hh  DetectorConstruction.cc  DetectorConstruction.hh  DetectorMessenger.cc  DetectorMessenger.hh  EventAction.cc  EventAction.hh  PhysicsList.cc  PhysicsList.hh  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.cc  PrimaryGeneratorMessenger.hh  RunAction.cc  RunAction.hh  SteppingAction.cc  SteppingAction.hh  main.cc
test/: test_beta.cc
